--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <div id="second-video-section" class="section hidden">
   <div class="video-container">
     <video id="second-video" controls style="display: none;">
-      <source src="lv_7410994536073186565_20241122201829.mp4"type="video/mp4">
+      <source src="video.mp4"type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
